build/log/idf_py_stdout_output_6195
[1/13] Performing build step for 'bootloader'
[1/1] cd /home/osama-shafiq/component_exp/build/bootloader/esp-idf/esptool_py && /home/osama-shafiq/.espressif/python_env/idf5.3_py3.11_env/bin/python /home/osama-shafiq/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/osama-shafiq/component_exp/build/bootloader/bootloader.bin
Bootloader binary size 0x6850 bytes. 0x7b0 bytes (7%) free.
[2/13] No install step for 'bootloader'
[3/13] Completed 'bootloader'
[4/13] Building C object esp-idf/file_system/CMakeFiles/__idf_file_system.dir/file_system.c.obj
[5/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/component_exp.c.obj
/home/osama-shafiq/component_exp/main/component_exp.c: In function 'app_main':
/home/osama-shafiq/component_exp/main/component_exp.c:11:29: warning: initialization discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
   11 |         char* file_buffer = read_file(FILES[2]);
      |                             ^~~~~~~~~
/home/osama-shafiq/component_exp/main/component_exp.c:11:15: warning: unused variable 'file_buffer' [-Wunused-variable]
   11 |         char* file_buffer = read_file(FILES[2]);
      |               ^~~~~~~~~~~
[6/13] Building C object esp-idf/spiffs_management/CMakeFiles/__idf_spiffs_management.dir/spiffs_management.c.obj
FAILED: esp-idf/spiffs_management/CMakeFiles/__idf_spiffs_management.dir/spiffs_management.c.obj 
/home/osama-shafiq/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-1288-g5524b692ee\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/osama-shafiq/component_exp/build/config -I/home/osama-shafiq/component_exp/components/spiffs_management -I/home/osama-shafiq/esp-idf/components/newlib/platform_include -I/home/osama-shafiq/esp-idf/components/freertos/config/include -I/home/osama-shafiq/esp-idf/components/freertos/config/include/freertos -I/home/osama-shafiq/esp-idf/components/freertos/config/xtensa/include -I/home/osama-shafiq/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/osama-shafiq/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/osama-shafiq/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/osama-shafiq/esp-idf/components/freertos/esp_additions/include -I/home/osama-shafiq/esp-idf/components/esp_hw_support/include -I/home/osama-shafiq/esp-idf/components/esp_hw_support/include/soc -I/home/osama-shafiq/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/osama-shafiq/esp-idf/components/esp_hw_support/port/esp32/. -I/home/osama-shafiq/esp-idf/components/heap/include -I/home/osama-shafiq/esp-idf/components/log/include -I/home/osama-shafiq/esp-idf/components/soc/include -I/home/osama-shafiq/esp-idf/components/soc/esp32 -I/home/osama-shafiq/esp-idf/components/soc/esp32/include -I/home/osama-shafiq/esp-idf/components/hal/platform_port/include -I/home/osama-shafiq/esp-idf/components/hal/esp32/include -I/home/osama-shafiq/esp-idf/components/hal/include -I/home/osama-shafiq/esp-idf/components/esp_rom/include -I/home/osama-shafiq/esp-idf/components/esp_rom/include/esp32 -I/home/osama-shafiq/esp-idf/components/esp_rom/esp32 -I/home/osama-shafiq/esp-idf/components/esp_common/include -I/home/osama-shafiq/esp-idf/components/esp_system/include -I/home/osama-shafiq/esp-idf/components/esp_system/port/soc -I/home/osama-shafiq/esp-idf/components/esp_system/port/include/private -I/home/osama-shafiq/esp-idf/components/xtensa/esp32/include -I/home/osama-shafiq/esp-idf/components/xtensa/include -I/home/osama-shafiq/esp-idf/components/xtensa/deprecated_include -I/home/osama-shafiq/esp-idf/components/lwip/include -I/home/osama-shafiq/esp-idf/components/lwip/include/apps -I/home/osama-shafiq/esp-idf/components/lwip/include/apps/sntp -I/home/osama-shafiq/esp-idf/components/lwip/lwip/src/include -I/home/osama-shafiq/esp-idf/components/lwip/port/include -I/home/osama-shafiq/esp-idf/components/lwip/port/freertos/include -I/home/osama-shafiq/esp-idf/components/lwip/port/esp32xx/include -I/home/osama-shafiq/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/osama-shafiq/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/osama-shafiq/esp-idf/components/spiffs/include -I/home/osama-shafiq/esp-idf/components/esp_partition/include -I/home/osama-shafiq/component_exp/components/file_system -I/home/osama-shafiq/esp-idf/components/json/cJSON -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/osama-shafiq/component_exp=. -fmacro-prefix-map=/home/osama-shafiq/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/spiffs_management/CMakeFiles/__idf_spiffs_management.dir/spiffs_management.c.obj -MF esp-idf/spiffs_management/CMakeFiles/__idf_spiffs_management.dir/spiffs_management.c.obj.d -o esp-idf/spiffs_management/CMakeFiles/__idf_spiffs_management.dir/spiffs_management.c.obj -c /home/osama-shafiq/component_exp/components/spiffs_management/spiffs_management.c
/home/osama-shafiq/component_exp/components/spiffs_management/spiffs_management.c: In function 'remote_option':
/home/osama-shafiq/component_exp/components/spiffs_management/spiffs_management.c:123:39: warning: variable 'upper_tem_range' set but not used [-Wunused-but-set-variable]
  123 |                 int lower_tem_range , upper_tem_range;
      |                                       ^~~~~~~~~~~~~~~
/home/osama-shafiq/component_exp/components/spiffs_management/spiffs_management.c: In function 'add_remote':
/home/osama-shafiq/component_exp/components/spiffs_management/spiffs_management.c:164:1: error: control reaches end of non-void function [-Werror=return-type]
  164 | }
      | ^
/home/osama-shafiq/component_exp/components/spiffs_management/spiffs_management.c: In function 'add_remote_options':
/home/osama-shafiq/component_exp/components/spiffs_management/spiffs_management.c:170:1: error: control reaches end of non-void function [-Werror=return-type]
  170 | }
      | ^
cc1: some warnings being treated as errors
[7/13] Linking C static library esp-idf/file_system/libfile_system.a
ninja: build stopped: subcommand failed.
